--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Bonus Calculator Object Challenge</title>
+    <script src="jquery-3.3.1.min.js"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
     <h1>Bonus Calculator Object Challenge</h1>
+
+    <input placeholder="enter name" id="enterName" />
+    <button type="submit" id="createButton">Bonuses!</button>
+    <ul id="bonus">
+    </ul>
   </body>
 </html>
